[package]
name = "alopex-skulk"
version = "0.2.0"
edition = "2021"
description = "Alopex Skulk - Time Series Storage Engine"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/alopex-db/alopex-skulk"
homepage = "https://github.com/alopex-db/alopex-skulk"
documentation = "https://docs.rs/alopex-skulk"
keywords = ["time-series", "database", "storage", "tsdb", "alopex"]
categories = ["database", "data-structures"]
readme = "README.md"

[features]
default = []

[dependencies]
# Alopex core for WAL and MemTable traits
alopex-core = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Compression and checksums
crc32fast = { workspace = true }
bitvec = { workspace = true }
bytes = { workspace = true }
xxhash-rust = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
proptest = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "tsm_bench"
harness = false
